# rust-juniper-rocket-diesel

./: .env  Cargo.toml  README.md  Rocket.toml
migrations/2020-04-29-203702_create_posts/: up.sql
src/: lib.rs  models.rs
