[package]
name = "diesel_demo"
version = "0.1.0"
authors = ["PabloSzx <pablosaez1995@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["postgres"] }
dotenv = "0.9.0"
serde = { version = "1.0.2", features = ["derive"]  }
serde_json = { version = "1.0.2" }
serde_derive = { version = "1.0.2" }
rocket = { version = "0.4.2" }
juniper_rocket = "0.5.2"
rocket_contrib = { version = "0.4.4", default-features = false, features = ["diesel_postgres_pool"] }
juniper = { version = "0.14.2" }
r2d2 = "0.8.8"
r2d2-diesel = "1.0.0"

[dev-dependencies.juniper]
version = "0.14.2"
features = ["expose-test-schema", "serde_json"]
